> update responsive.css; > fx typo in 2018/09-02

--- a/blog/2018/09-02_why.md
+++ b/blog/2018/09-02_why.md
@@ -35,7 +35,7 @@ I'm glad I didn't decide to immediately publish the changes publicly, as, well,
 there were a few errors. Two I was able to fix in an instand - the other one
 required some more research. Found out the main Parsedown script was outdated.
 So I got its most recent version and it worked. Trust me, this doesn't happen
-often. And then it was time actually create the first blog post I've ever written.
+often. And then it was time to actually create the first blog post I've ever written.
 
 ### The future {.blog_post_heading}
 
