--- a/blog/posts/2018/09-02_why.md
+++ b/blog/posts/2018/09-02_why.md
@@ -46,4 +46,4 @@ ten at a time, which sounds reasonable to me. I then also need to create somethi
 with _actual_ permalinks, rather than links to a heading on this page.
 
 As for frequency, I don't expect to write up posts daily. Maybe at least once a
-week is a reasonable frequency for now.
+week is reasonable for now.
