> alles verplaatst naar eigen website; + 2018/10-02

--- a/blog/posts/2018/09-02_why.md
+++ b/blog/posts/2018/09-02_why.md
@@ -1,4 +1,4 @@
-<p class="date">27 September 2018 | <a href="<!-- PERMALINK -->" title="<!-- PERMALINKTITLE -->">permalink</a></p>
+<p class="date">27 September 2018 | <a href="<!-- PERMALINK -->" title="<!-- PERMALINKTITLE -->">permalink</a> | Category: <a href="/blog/posts/categories.php?category=general">General</a></p>
 
 ## Why this blog? {.blog_post_heading .anchor #why_this_blog}
 
