--- a/blog/posts/years/2018/09-02_why.md
+++ b/blog/posts/years/2018/09-02_why.md
@@ -1,4 +1,4 @@
-<p class="date">27 September 2018 | <a href="<!-- PERMALINK -->" title="<!-- PERMALINKTITLE -->">permalink</a> | Category: <a href="/blog/posts/categories.php?category=general">General</a></p>
+<p class="date">27 September 2018 | <a href="<!-- PERMALINK -->" title="<!-- PERMALINKTITLE -->">permalink</a> | Category: <a href="<!-- CATEGORYLINK -->" title="<!-- CATEGORYTITLE -->">General</a></p>
 
 ## Why this blog? {.blog_post_heading .anchor #why_this_blog}
 
@@ -14,7 +14,7 @@ There are loads of other blog scripts around. You'd say I could easily utilise
 that software instead, rather than 'fighting' with my current setup. Well then...
 I sometimes like to challenge myself. And I did that with this. I always wanted
 to write down observations of things I've seen on the Old Faithful streaming
-webcam, especially after what happened on [Geyser Hill on the 15th of September](/blog/posts/individual.php?year=2018&post=09-01_september_surprises "Post: September in Review (so far)").
+webcam, especially after what happened on [Geyser Hill on the 15th of September](/blog/posts/2018/09-01_september_surprises/ "Post: September in Review (so far)").
 
 ### ...searching... {.blog_post_heading}
 
